# astr-421

./: HW1.ipynb  HW_6.ipynb  RRLyr_Period-Luminosity.ipynb  dash_demo.py  hello.py  hw-1.ipynb  hw-2.ipynb  hw-3.ipynb  hw-4.ipynb  hw2.py  hw6_desh.py  pyproject.toml
data/: RRLyr_Period-Luminosity.ipynb
