[project]
name = "astr-421"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astropy>=6.0.1",
    "dash>=2.18.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "rich>=13.9.4",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
]
